Fix: Focus box on mobile

--- a/src/main.css
+++ b/src/main.css
@@ -10,6 +10,14 @@
   margin: 0;
 }
 
+* {
+  -webkit-tap-highlight-color: transparent;
+}
+
+a:focus,a:visited,a:active, button:focus, button:active{
+  outline: none;
+}
+
 body {
   margin: 0;
   display: flex;
